<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">WebService</string>
    <string name="welcome">Welcome to the Marvel HQ\'s</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="create">Create Account</string>
    <string name="name">Name</string>
    <string name="remember">Remember</string>
    <string name="save">save</string>
</resources>